src/styles.css
/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
*:not(dialog) {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Add accessible line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

:root {
  --text-color: hsl(0, 0%, 36%);
}

body {
  /* background-color: hsl(0, 0%, 95%); */
}

h1,
h2,
h3,
h4 {
  font-family: 'Playfair Display', Georgia, 'Times New Roman', Times, serif;
  font-weight: 500;
}

p {
  font-family:
    'Roboto',
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    'Helvetica Neue',
    Arial,
    sans-serif;
  color: var(--text-color);
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

/* Helper Classes */

.flex {
  display: flex;
  flex-direction: column;
}

/* ==== Header ==== */

header {
  display: flex;
  justify-content: center;
  align-items: center;
  /* flex-direction: column; */
  /* gap: 20px; */
  /* padding: 12px; */
  background: url(images/header-bg.webp) center/cover no-repeat;
  padding-bottom: 40px;
}

.header-img-container {
  position: relative;
  max-width: 90vw;
  box-shadow:
    rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
}

.profile-name {
  position: absolute;
  bottom: 0px;
  left: 50%;
  transform: translateX(-50%);
  font-size: clamp(1.25rem, 11vw, 3.75rem);
  color: hsl(0, 0%, 98%);
  font-family: 'Playfair Display', Georgia, 'Times New Roman', Times, serif;
  line-height: 1.15;
  font-weight: 500;
  text-shadow:
    0px 4px 3px rgba(0, 0, 0, 0.4),
    0px 8px 13px rgba(0, 0, 0, 0.1),
    0px 18px 23px rgba(0, 0, 0, 0.1);
}

.header-img-container img {
  height: 100%;
  width: 100%;
  aspect-ratio: 2/3;
  object-fit: cover;
}

.about-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 12px;
  padding: 20px;
}

.info-cont {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 12px;
}

.social-links {
  display: flex;
  justify-content: center;
  gap: 12px;
}

.social-links svg {
  width: 100%;
  max-width: 24px;
  flex-shrink: 0;
}

/* ==== Main Projects ==== */

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 100px 20px 200px 20px;
  gap: 20px;
}

main h2 {
  font-size: 2rem;
}

.project-cards-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  place-content: center;
  gap: 52px;
  width: 100%;
}

.project-card {
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  min-height: 450px;
  border-radius: 20px;
}

.project-card h3 {
  font-size: 1.5rem;
}

.project-img-container {
  /* flex: 1; */
}

.project-img-container img {
  height: 100%;
  aspect-ratio: 4/5;
  object-fit: cover;
}

.project-info-container {
  min-height: 240px;
  gap: 8px;
  padding: 16px;
}

.name-links-container {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.project-links {
  flex-shrink: 0;
  display: flex;
  align-items: center;
  gap: 16px;
}

.project-links svg {
  width: 100%;
  max-width: 24px;
  /* height: auto; */
  /* flex-shrink: 0; */
}

.project-links a {
  display: flex;
  text-decoration: none;
  color: inherit;
}

.project-links,
.new-tab-icon {
  font-size: 24px;
}

/* ==== Contact ==== */

footer {
  display: flex;
  flex-direction: column;
  background-color: hsl(192, 91%, 36%);
}

.contact {
  gap: 20px;
  padding: 24px;
  padding-bottom: 60px;
}

p.bigger-font {
  font-size: 20px;
}

.contact p {
  color: white;
}

.phone-number-cont,
.email-cont {
  display: flex;
  gap: 8px;
  color: white;
}

.contact h2 {
  align-self: center;
  font-size: 2rem;
  color: white;
}

.contact .social-links {
  align-self: center;
  gap: 24px;
}

.contact .social-links svg {
  max-width: 32px;
}

.contact-img-container img {
  aspect-ratio: 2/3;
  object-fit: cover;
}

/* ==== Tablets ==== */

@media (min-width: 590px) {
  /* ==== Header ==== */

  header {
    padding: 100px 0px;
  }

  header .social-links {
    display: none;
  }

  .header-img-container {
    width: 300px;
    margin-left: -60px;
    margin-top: -120px;
    margin-right: 20px;
    float: left;
    border-radius: 16px;
  }

  .profile-name {
    transform: translate(15%);
    top: 0px;
    width: max-content;
    font-size: clamp(1.25rem, 7vw, 3.75rem);
  }

  .header-img-container img {
    border-radius: 16px;
    aspect-ratio: 1 / 1;
    object-fit: cover;
  }

  .about-section {
    display: block;
    width: clamp(42ch, 75vw, 80ch);
    /* margin-top: 15%; */
    padding: 60px 20px;
    background-color: white;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  }

  .info-cont {
    display: block;
  }

  .about-section h1 {
    /* width: 100%; */
    text-align: center;
  }

  /* ==== Main ==== */

  main {
    padding: 100px 40px 200px 40px;
  }

  main h2 {
    align-self: flex-start;
  }

  /* ==== Contact ==== */

  footer {
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    gap: 20px;
    padding: 40px;
    padding-bottom: 60px;
  }

  .contact {
    padding: 0;
  }

  .contact .social-links,
  .contact h2 {
    align-self: flex-start;
  }

  .contact-img-container {
    align-self: stretch;
    display: flex;
    justify-content: center;
    /* align-items: center; */
    width: 75%;
    /* padding: 40px; */
  }

  .contact-img-container img {
    height: 100%;
  }
}

@media (min-width: 1024px) {
  /* ==== Header ==== */

  header .social-links {
    align-self: flex-end;
    display: flex;
  }

  .info-cont h1 {
    align-self: flex-start;
  }

  .about-section {
    display: flex;
    flex-direction: row;
    gap: 0;
    /* align-items: stretch; */
    /* min-height: 300px; */
    padding: 20px;
    /* min-width: 90ch; */
    width: clamp(42ch, 75vw, 130ch);
  }

  .info-cont {
    display: flex;
    flex-direction: column;
    gap: 16px;
  }

  .header-img-container {
    flex-shrink: 0;
    display: flex;
    width: auto;
    /* height: 100%; */
    /* width: 100%; */
    margin-top: -60px;
    margin-bottom: -60px;
    margin-left: -60px;
  }

  .header-img-container img {
    /* border-radius: 16px; */
    /* aspect-ratio: 1 / 1; */
    /* width: 100%; */
    /* height: 100%; */
    /* object-fit: cover; */
  }

  .profile-name {
    transform: translate(-50%);
    top: auto;
    width: auto;
    font-size: clamp(1.75rem, 4.5vw, 3.75rem);
  }

  /* ==== Footer ==== */

  .contact-img-container {
    width: 40%;
  }

  .contact-img-container img {
    /* aspect-ratio: 3 / 2; */
    aspect-ratio: auto;
  }
}

